latexml (0.8.5-2) UNRELEASED; urgency=medium

  * Create d/links instead of arguments in d/rules.
  * Remove make-orig-tar target from d/rules.

 -- Hilmar Preusse <hille42@web.de>  Thu, 04 Feb 2021 23:15:03 +0100

latexml (0.8.5-1) unstable; urgency=medium

  * New upstream release (Closes: #979580).

  * Enable test suite. Add needed packags to BD:
    - libpod-parser-perl
    - texlive-fonts-extra (maybe this could be removed, some tests skipped
      but saves bandwidth and CPU cycles)
    - texlive-latex-extra
    - texlive-lang-cyrillic
    - texlive-lang-french
    - texlive-lang-german
    - texlive-science
  * Add sample files to package.
  * Bump Standards Version to 4.5.1, no changes needed.

  * Lintian:
    - I: quilt-patch-missing-description
    - P: package-does-not-install-examples
    - P: silent-on-rules-requiring-root
    - I: latexml: typo-in-manual-page

 -- Hilmar Preusse <hille42@web.de>  Sun, 10 Jan 2021 23:47:13 +0100

latexml (0.8.4-2) unstable; urgency=medium

  [ Debian Janitor ]
  * Trim trailing whitespace.
  * Use secure URI in Homepage field.
  * Bump debhelper from deprecated 9 to 12.
  * Set debhelper-compat version in Build-Depends.
  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
    Repository-Browse.

  [ Hilmar Preusse ]
  * Add a Dep on libpod-parser-perl (Closes: #961157).
  * Add me to list of Uploaders.

 -- Hilmar Preusse <hille42@web.de>  Mon, 24 Aug 2020 00:00:25 +0200

latexml (0.8.4-1) unstable; urgency=medium

  [ Hilmar Preusse ]
  * Add debian/watch file.

  [ Norbert Preining ]
  * simplify watch file
  * New upstream version 0.8.4

 -- Norbert Preining <norbert@preining.info>  Wed, 19 Feb 2020 05:20:41 +0900

latexml (0.8.3-3) unstable; urgency=medium

  * rebuild for source only upload

 -- Norbert Preining <norbert@preining.info>  Fri, 19 Jul 2019 14:14:21 +0900

latexml (0.8.3-2) unstable; urgency=medium

  * update VCS, my email, bump standards version
