@@ -1,0 +1,2 @@
+README.pod
+manual.pdf
