@@ -1,1 +1,1 @@
-usr/share/texmf/doc/latexml/manual.pdf usr/share/doc/latexml/manual.pdf
+usr/share/doc/latexml/manual.pdf usr/share/texmf/doc/latexml/manual.pdf
