@@ -2,6 +2,7 @@ latexml (0.8.5-2) UNRELEASED; urgency=medium
 
   * Create d/links instead of arguments in d/rules.
   * Remove make-orig-tar target from d/rules.
+  * Install manual.pdf in /u/s/doc, symlink is in texmf-tree.
 
  -- Hilmar Preusse <hille42@web.de>  Thu, 04 Feb 2021 23:15:03 +0100
 
